--- a/404.html
+++ b/404.html
@@ -517,7 +517,7 @@
           
 
           <li class="nav-item">
-            <a class="nav-link " href="/uploads/CV_Peintner.pdf"><span>CV</span></a>
+            <a class="nav-link " href="/uploads/cv.pdf"><span>CV</span></a>
           </li>
 
           
